correct verify tests
Signed-off-by: anushkamittal20 <anumittal4641@gmail.com>

--- a/test/cli/test/images/digest/policies.yaml
+++ b/test/cli/test/images/digest/policies.yaml
@@ -2,7 +2,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: require-image-digest
+  name: require-image-digest1
   annotations:
     pod-policies.kyverno.io/autogen-controllers: none
 spec:
@@ -15,6 +15,7 @@ spec:
       verifyImages:
         - imageReferences:
             - "*"
+          required: false
           verifyDigest: true
 
 
