--- a/test/cli/test/images/mutate-digest/resources.yaml
+++ b/test/cli/test/images/mutate-digest/resources.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: no-digest
+  name: changefordigest
   namespace: test
   labels:
     app: app
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: with-digest
+  name: nochangefordigest
   namespace: test
   labels:
     app: app
