adds more imageverify tests
Signed-off-by: Mritunjay Sharma <mritunjaysharma394@gmail.com>

--- a/test/cli/test/images/any-attestor/kyverno-test.yaml
+++ b/test/cli/test/images/any-attestor/kyverno-test.yaml
@@ -4,12 +4,12 @@ policies:
 resources:
   - resources.yaml
 results:
-  - policy: check-image-with-any
+  - policy: multiple-key-any
     rule: verify-any
     resource: signed
     kind: Pod
     status: pass
-  - policy: check-image-with-any
+  - policy: multiple-key-any
     rule: verify-any
     resource: unsigned
     kind: Pod
