--- a/test/cli/test/images/autogen/resources.yaml
+++ b/test/cli/test/images/autogen/resources.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: example-task-verified
+  name: example-task-name
 spec:
   steps:
     - name: cosign
